@@ -1,18 +1,19 @@
 package net.SpectrumFATM.black_archive.fabric.network;
 
-import net.SpectrumFATM.black_archive.fabric.BlackArchive;
 import net.fabricmc.fabric.api.client.networking.v1.ClientPlayNetworking;
 import net.fabricmc.fabric.api.networking.v1.PacketByteBufs;
 import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
 import net.minecraft.network.PacketByteBuf;
 import net.minecraft.registry.RegistryKey;
 import net.minecraft.util.Identifier;
+import net.SpectrumFATM.black_archive.fabric.BlackArchive;
+import whocraft.tardis_refined.common.util.DimensionUtil;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class DimensionRequestPacket {
-    public static final Identifier ID = new Identifier(BlackArchive.MOD_ID, "dimension_request");
+public class AllowedDimensionsRequestPacket {
+    public static final Identifier ID = new Identifier(BlackArchive.MOD_ID, "allowed_dimensions_request");
 
     public static void send() {
         PacketByteBuf buf = PacketByteBufs.create();
@@ -22,19 +23,17 @@ public class DimensionRequestPacket {
     public static void register() {
         ServerPlayNetworking.registerGlobalReceiver(ID, (server, player, handler, buf, responseSender) -> {
             server.execute(() -> {
-                // Handle the request and send the dimension data back to the client
-                List<String> dimensions = server.getWorldRegistryKeys().stream()
+                List<String> allowedDimensions = DimensionUtil.getAllowedDimensions(server).stream()
                         .map(RegistryKey::getValue)
                         .map(Identifier::toString)
-                        .filter(id -> !id.startsWith("tardis_refined"))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 PacketByteBuf responseBuf = PacketByteBufs.create();
-                responseBuf.writeInt(dimensions.size());
-                for (String dimension : dimensions) {
+                responseBuf.writeInt(allowedDimensions.size());
+                for (String dimension : allowedDimensions) {
                     responseBuf.writeString(dimension);
                 }
-                ServerPlayNetworking.send(player, DimensionResponsePacket.ID, responseBuf);
+                ServerPlayNetworking.send(player, AllowedDimensionsResponsePacket.ID, responseBuf);
             });
         });
     }
